--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -1,7 +1,7 @@
 <section class="recipe-full-page">
   <!-- recipe name -->
   <div class="recipe-name-container">
-    
+
     <span class="recipe-name">{{CAPTION}}</span>
   </div>
   <!-- ingredients -->
@@ -39,7 +39,7 @@
   <div class="middle_section">
     <div class="recipe-toolbar-container">
       <div class="recipe-navitem">
-        <span class="recipe-navbar-icon" id="bookmark-icon"><i class="far fa-bookmark"></i></span>
+        <span class="recipe-navbar-icon" id="bookmark-icon"><i class="fas fa-star"></i></span>
         <span class="nav-text">Bookmark</span>
       </div>
       <div class="recipe-navitem">
@@ -51,22 +51,22 @@
         <span class="nav-text">CopyURL</span>
       </div>
       <div class="recipe-navitem">
-        <a href= "https://www.google.com/intl/us_ALL/drive/"
-         <span class="recipe-navbar-icon" id="googleDrive-icon"><i class="fab fa-google-drive"></i></span>
-        <span class="nav-text" >GoogleDrive</span>
-      </a>
+        <a href= "https://www.google.com/intl/us_ALL/drive/">
+          <span class="recipe-navbar-icon" id="googleDrive-icon"><i class="fab fa-google-drive"></i></span>
+          <span class="nav-text" >GoogleDrive</span>
+        </a>
       </div>
       <div class="recipe-navitem">
-        <a href="https://www.instagram.com/"
-        <span class="recipe-navbar-icon" id="instagram-icon"><i class="fab fa-instagram"></i></span>
-        <span class="nav-text">Instagram</span>
-      </a>
+        <a href="https://www.instagram.com/">
+          <span class="recipe-navbar-icon" id="instagram-icon"><i class="fab fa-instagram"></i></span>
+          <span class="nav-text">Instagram</span>
+        </a>
       </div>
       <div class="recipe-navitem">
-        <a href="https://www.facebook.com/"
-        <span class="recipe-navbar-icon" id="facebook-icon"><i class="fab fa-facebook-square"></i></span>
-        <span class="nav-text">Facebook</span>
-      </a>
+        <a href="https://www.facebook.com/">
+          <span class="recipe-navbar-icon" id="facebook-icon"><i class="fab fa-facebook-square"></i></span>
+          <span class="nav-text">Facebook</span>
+        </a>
       </div>
     </div>
   </div>
