--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,27 +2,19 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="icon" href="favicon.ico">
-
   <meta charset="utf-8">
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/osu-cs290-f19/final-project-group-13/master/favicon.ico" />
   <title>GoBeav Recipes</title>
   <link href="https://fonts.googleapis.com/css?family=Alatsi|Kaushan+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.runtime.js" charset="utf-8"
     defer></script>
   <script src="/itemTemplate.js" charset="utf-8" defer></script>
   <script src="index.js" charset="utf-8" defer></script>
-
 </head>
 
 <body>
