--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -5,7 +5,7 @@
   <div class="modal-add-recipe-dialog">
 
     <div class="modal-add-recipe-header">
-      <h3>Add a recipe</h3>
+      <h3>Add a Recipe</h3>
       <button type="button" id="modal-add-recipe-close" class="modal-hide-button">&times;</button>
     </div>
 
@@ -18,12 +18,11 @@
 
       <div class="recipe-input-element">
         <label for="recipe-photo-input">Photo (URL)</label>
-        <input type="text" id="recipe-photo-input" placeholder="Drag Images or URLs here">
+        <input type="text" id="recipe-photo-input" placeholder="Photo URL">
       </div>
 
       <div class="recipe-input-element">
         <label for="recipe-categories-input">Categories</label>
-        <!--<input type="text" id="recipe-categories-input" placeholder="Categories  ex)Asian, American, Italian, etc.">-->
         <select id="recipe-categories-input">
           <option>Asian</option>
           <option>American</option>
