--- a/views/recipePage.handlebars
+++ b/views/recipePage.handlebars
@@ -13,7 +13,7 @@
       <div class="ingredients-element">
 
         <div id="myDIV" class="header">
-          <h2 style="margin:5px">ingredients</h2>
+          <h2 style="margin:5px">Ingredients</h2>
           <input type="text" id="myInput" placeholder="Please insert the ingredients...">
           <span onclick="newElement()" class="addBtn">Add</span>
         </div>
