--- a/public/style.css
+++ b/public/style.css
@@ -118,6 +118,7 @@ aside {
   border: none;
   position: relative;
   right: 50px;
+  outline: none;
 }
 
 #flip:hover {
@@ -159,21 +160,16 @@ aside {
   display: inline;
   float: left;
   position: relative;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  outline: none;
+  font-size: 16px;
 }
 
-#filter-text-ingredients {
-  width: 18%;
-  margin-left: 2%;
-  background: transparent;
-  background-color: white;
-  color: #fff;
-  display: inline;
-  height: 30px;
-  float: left;
-}
-
-input#filter-text-ingredients.filter-input {
-  color: black;
+select option {
+  font-family: 'Alatsi', sans-serif;
+  font-size: 16px;
+  color: #4D4D4D;
 }
 
 .container {
@@ -436,6 +432,7 @@ a {
   font-size: 20px;
   border: 1px solid #aaa;
   border-radius: 8px;
+  outline: none;
 }
 
 .recipe-input-element input::placeholder {
@@ -448,6 +445,11 @@ a {
   font-size: 20px;
   border: 1px solid #aaa;
   border-radius: 8px;
+  outline: none;
+}
+
+#recipe-categories-input option{
+  font-size: 18px;
 }
 
 .modal-footer {
@@ -631,7 +633,7 @@ ul li.checked::before {
 }
 
 /* Style the input */
-input {
+#myDIV input {
   margin: 0;
   border: none;
   border-radius: 0;
@@ -640,10 +642,15 @@ input {
   padding: 10px;
   float: left;
   font-size: 16px;
+  outline: none;
 }
 
 #myUL {
   word-break: break-all;
+}
+
+.ingredient_li {
+  padding-right: 40px;
 }
 
 /* Style the "Add" button */
@@ -740,6 +747,7 @@ input {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  padding-right: 40px;
 }
 
 /* Set all odd list items to a different color (zebra-stripes) */
@@ -812,6 +820,7 @@ input {
   padding: 10px;
   float: left;
   font-size: 16px;
+  outline: none;
 }
 
 /* Style the "Add" button */
